--- a/forGit.html
+++ b/forGit.html
@@ -1,5 +1,6 @@
 <HTML>
      <title>forGit</title>
-	 <body>git</body>
+	 <body>git
+	 <div><p>new branch</p></div></body>
 	 <footer>footer</footer>
 	 </HTML>
