--- a/forGit.html
+++ b/forGit.html
@@ -2,5 +2,5 @@
      <title>forGit</title>
 	 <body>git
 	 <div><p>new </p></div></body>
-	 <footer>footer</footer>
+	 <footer>222footer</footer>
 	 </HTML>
